# forest

./: .gitignore  .mypy.ini  .pylintrc  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  DIALOGBOT.md  Dockerfile  INSTALL.md  LICENSE  Pipfile  README.md  ci.yaml  contactbot.py  datastore.py  dedup.py  dialogbot.py  echopay.py  emptybot.py  evilbot.py  fauxin.py  fly.toml  forest_tables.py  fs_tester.py  fuse.py  group_bot.py  hellobot.py  insecurebot.py  main.py  mem.py  migrate.py  payments_monitor.py  pghelp.py  pyproject.toml  register.py  schedule.py  send_payment_message.py  setup.py  setup.sh  sketch_forest.py  (+7 more)
.githooks/: pre-commit
.github/: Pipfile  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
airdropbot/: Dockerfile  Pipfile  airdropbot.py  fly.toml
airdropbot/forest/: payments_monitor.py
bounce/: Dockerfile  Pipfile  bouncebot.py  fly.toml  restricted_usernames.py
captcha/: Pipfile  __init__.py
contact/: Dockerfile  INSTALL.md  Pipfile  README.md  contactbot.py  fly.toml  forest_tables.py  pyproject.toml  teli.py
dialogflow/: README.md  dialogbot.py  pyproject.toml
echopay/: Dockerfile  Pipfile  README.md  echopay.py  echopay_final.py  echopay_fully_implemented.py  echopay_template.py
forest/: Pipfile  __init__.py  autosave.py  config.yaml  configs.py  core.py  cryptography.py  datastore.Dockerfile  datastore.py  dedup.py  extra.py  full_service.py  fuse.py  health_service.py  main.py  mc_util.py  mem.py  memorybot.py  message.py  mockbot.py  payments_monitor.py  pdict.py  pdictng.py  pghelp.py  string_dist.py  synonymbot.py  talkback.py  utils.py
forest/mc_util/: __init__.py  external_pb2.py  printable_pb2.py
formbot/: eventbot.py
full-service/: Dockerfile  run.sh
full-service-stuff/: Dockerfile  fly.toml  run.sh
hotline/: Dockerfile  Pipfile  clangat.py  fly.toml  hotline.md  hotline.py
imogen/: Dockerfile  Pipfile  README.md  a6000.yaml  classic-fly.toml  dalle.yaml  deploy.sh  dev-fly.toml  dev_secrets  diffuse.yaml  esrgan-job.yaml  fly.toml  free-imagegen-job.yaml  gelato.py  imagegen-job.yaml  imogen.py  paid-imagegen-job.yaml  passwd  pl_imogen.sql  pyproject.toml  ren-fly.toml  signal-cli  squid.conf
imposter/: Dockerfile  Pipfile  README.md  fly.toml  imposter.py  pyproject.toml
imposter/config/: deepfates.json  mobot.json  pkd.json
linked-auxin/: Dockerfile  fly.toml  linked.py
mc_util/: __init__.py  external_pb2.py  external_pb2.pyi  printable_pb2.py  printable_pb2.pyi
mobfriend/: Dockerfile  Pipfile  fly.toml  mobfriend.py  pyproject.toml  scan.py
other_bots/: evilbot.py  forest  group_bot.py  insecurebot.py  tiamat.py
party/: Dockerfile  Pipfile  clangat.py  cleanup.py  fly.toml  pdict.py  pdictng.py
pdictng_docs/: README.md
purse/: Dockerfile  Pipfile  fly.toml  purse.py
sample_bots/: Pipfile  evilbot.py  hellobot.py  insecurebot.py  pyproject.toml  template.py  tiamat.py
teddy/: Dockerfile  Pipfile  charity.py  fly.toml  give.py  teddy.py
test/: test_forest.py
tests/: mockbot.py  test_questions_bot.py  test_unit.py
tests/testbots/: test_questions_bot.py
vlada/: charity.py  fly.toml  pyproject.toml
