[tool.poetry]
name = "forestbot"
version = "1.2.0"
description = "Enables a Forest of MobileCoin enabled Signal bots"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aioprocessing = "*"
asyncpg = "*"
base58 = "*"
phonenumberslite = "*"
prometheus_async = "*"
prometheus_client = "*"
protobuf = "*"
termcolor = "*"
ulid2 = "*"
pycryptodome = "*"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
