[tool.poetry]
name = "forest contact"
version = "0.1.0"
description = ""
authors = ["forest <forest@mobilecoin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
forestbot = {git = "https://github.com/mobilecoinofficial/forest"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
