[tool.poetry]
name = "imogen"
version = "0.1.0"
description = ""
authors = ["Sylvie Liberman <technillogue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
forestbot = {git = "https://github.com/mobilecoinofficial/forest", rev="imogen-1.2.7"}
aioredis = "*"
openai = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
