[tool.poetry]
name = "imposter"
version = "0.1.0"
description = ""
authors = ["deepfates <deepfates@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioprocessing = "^2.0.0"
asyncpg = "^0.25.0"
aiohttp = "^3.8.1"
base58 = "^2.1.1"
phonenumberslite = "^8.12.45"
prometheus-async = "^22.1.0"
prometheus-client = "^0.13.1"
protobuf = "^3.19.4"
termcolor = "^1.1.0"
ulid2 = "^0.3.0"
pycryptodome = "^3.14.1"
personate = { path = "../../personate/", develop = true}


[tool.poetry.dev-dependencies]
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
