[tool.poetry]
name = "mobfriend"
version = "0.1.0"
description = ""
authors = ["Ilia <i@mobilecoin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
forestbot = {git = "https://github.com/mobilecoinofficial/forest", rev = "main"}
zbar-py = {git = "https://github.com/zplab/zbar-py"}
amzqr = {git = "https://github.com/itdaniher/amazing-qr", rev = "63cbdfd"}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
